@@ -37,6 +37,21 @@ bw.nrd <- function (x)
     1.06 * min(sqrt(var(x)), h) * length(x)^(-1/5)
 }
 
+
+## switch-over at n > nb/2 found by empirical timing.
+bw_pair_cnts <- function(x, nb, binned)
+{
+    if(binned) {
+        r <- range(x)
+        d <- diff(r) * 1.01/nb
+        ## Emulate exactly how the C code does its binning.
+        xx <- trunc(abs(x)/d) *sign(x)
+        xx <- xx - min(xx) + 1
+        xxx <- tabulate(xx, nb)
+        list(d, .Call(C_bw_den_binned, xxx))
+    } else .Call(C_bw_den, nb, x)
+}
+
 bw.SJ <- function(x, nb = 1000L, lower = 0.1*hmax, upper = hmax,
                   method = c("ste", "dpi"), tol = 0.1*lower)
 {
@@ -53,7 +68,8 @@ bw.SJ <- function(x, nb = 1000L, lower = 0.1*hmax, upper = hmax,
     SDh <- function(h) .Call(C_bw_phi4, n, d, cnt, h)
     TDh <- function(h) .Call(C_bw_phi6, n, d, cnt, h)
 
-    Z <- .Call(C_bw_den, nb, x); d <- Z[[1L]]; cnt <- Z[[2L]]
+    Z <- bw_pair_cnts(x, nb, n > nb/2)
+    d <- Z[[1L]]; cnt <- Z[[2L]]
     scale <- min(sd(x), IQR(x)/1.349)
     a <- 1.24 * scale * n^(-1/7)
     b <- 1.23 * scale * n^(-1/9)
@@ -100,7 +116,8 @@ bw.ucv <- function(x, nb = 1000L, lower = 0.1*hmax, upper = hmax,
     storage.mode(x) <- "double"
 
     hmax <- 1.144 * sqrt(var(x)) * n^(-1/5)
-    Z <- .Call(C_bw_den, nb, x); d <- Z[[1L]]; cnt <- Z[[2L]]
+    Z <- bw_pair_cnts(x, nb, n > nb/2)
+    d <- Z[[1L]]; cnt <- Z[[2L]]
     fucv <- function(h) .Call(C_bw_ucv, n, d, cnt, h)
     h <- optimize(fucv, c(lower, upper), tol = tol)$minimum
     if(h < lower+tol | h > upper-tol)
@@ -120,7 +137,8 @@ bw.bcv <- function(x, nb = 1000L, lower = 0.1*hmax, upper = hmax,
     storage.mode(x) <- "double"
 
     hmax <- 1.144 * sqrt(var(x)) * n^(-1/5)
-    Z <- .Call(C_bw_den, nb, x); d <- Z[[1L]]; cnt <- Z[[2L]]
+    Z <- bw_pair_cnts(x, nb, n > nb/2)
+    d <- Z[[1L]]; cnt <- Z[[2L]]
     fbcv <- function(h) .Call(C_bw_bcv, n, d, cnt, h)
     h <- optimize(fbcv, c(lower, upper), tol = tol)$minimum
     if(h < lower+tol | h > upper-tol)
