@@ -66,17 +66,22 @@ bw.SJ(x, nb = 1000, lower = 0.1 * hmax, upper = hmax,
   \code{c(lower, upper)} when the boundaries were not user-specified and
   do not bracket the root.
 
-  The last three methods use all pairwise binned distances, hence are of
-  complexity \eqn{O(n^2)} and considerably slower than the first two for
-  larger \eqn{n}.  A faster method for the Sheather--Jones
-  direct-plug-in selector for larger \eqn{n} is available in package
-  \CRANpkg{KernSmooth}, using binning: its function
-  \code{\link[KernSmooth]{dpik}} is a direct replacement for
-  \code{bw.SJ(method = "dpi")}.
+  The last three methods use all pairwise binned distances: they are of
+  complexity \eqn{O(n^2)} up to \code{n = nb/2} and \eqn{O(n)}
+  thereafter.  Because of the binning, the results differ slightly when
+  \code{x} is translated or sign-flipped.
 }
 \value{
   A bandwidth on a scale suitable for the \code{bw} argument
   of \code{density}.
+}
+\note{
+  Long vectors \code{x} are not supported, but neither are they by
+  \code{\link{density}} and kernel density estimation and for more than
+  a few thousand points a histogram would be preferred.
+}
+\author{
+  B. D. Ripley, taken from early versions of package \pkg{MASS}.
 }
 \seealso{
   \code{\link{density}}.
