@@ -1,5 +1,5 @@
 
-R Under development (unstable) (2017-02-13 r72167) -- "Unsuffered Consequences"
+R Under development (unstable) (2017-02-19 r72213) -- "Unsuffered Consequences"
 Copyright (C) 2017 The R Foundation for Statistical Computing
 Platform: x86_64-pc-linux-gnu (64-bit)
 
@@ -22,8 +22,8 @@ Type 'q()' to quit R.
 > ## UCV, BCV and SJ all gave wrong answers in example(bw.ucv)
 > c(nrd0 = bw.nrd0(precip), nrd = bw.nrd(precip),
 +   ucv = bw.ucv(precip), bcv = bw.bcv(precip),
-+   "SJ-dpi" = bw.SJ(precip, method="dpi"),
-+   "SJ-ste" = bw.SJ(precip, method="ste"))
++   "SJ-dpi" = bw.SJ(precip, method = "dpi"),
++   "SJ-ste" = bw.SJ(precip, method = "ste"))
   nrd0    nrd    ucv    bcv SJ-dpi SJ-ste 
 3.8479 4.5320 4.8619 6.6808 4.0220 3.9318 
 Warning message:
@@ -33,16 +33,17 @@ In bw.bcv(precip) : minimum occurred at one end of the range
 > set.seed(1); bw.bcv(rnorm(6000))
 [1] 0.18471
 > set.seed(1); x <- rnorm(47000)
-> bw.ucv(x); bw.SJ(x,  method="dpi"); bw.SJ(x,  method="ste")
+> bw.ucv(x); bw.SJ(x,  method = "dpi"); bw.SJ(x,  method = "ste")
 [1] 0.047906
 [1] 0.12257
 [1] 0.12282
 > 
 > ## An extremely unbalanced example where counts exceed INT_MAX
+> ## Prior to R 3.4.0 was slow as O(n^2)
 > set.seed(1); bw.SJ(c(runif(65537), 1e7))
 [1] 6.4053e-05
 > 
 > 
 > proc.time()
    user  system elapsed 
- 20.619   0.020  20.644 
+  0.183   0.024   0.200 
